# pheonx-core

./: .gitignore  Dockerfile  alice.profile.json
.github/workflows/: libcabi-build-and-release.yml
c-abi-libp2p/: .gitignore  Cargo.toml  build.rs
c-abi-libp2p/deploy/relay/: Dockerfile  README.md  cloud-init.hetzner.relay.yaml  docker-compose.hub.yml  docker-compose.yml  entrypoint.sh  publish_dockerhub.sh
c-abi-libp2p/docs/: networking_overview.md
c-abi-libp2p/examples/: README.md
c-abi-libp2p/examples/cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  abi_bindings.cpp  abi_bindings.h  cli_args.cpp  cli_args.h  docker-compose.yml  dyn_lib.cpp  dyn_lib.h  ping.cpp  ping_app.cpp  ping_app.h
c-abi-libp2p/examples/python/: README.md  environment.yml  fidonext_chat_client.py  fidonext_terminal_client.py  ping_standalone_nodes.py  ping_two_nodes.py  requirements.txt  run_local_mesh.sh  setup_env.sh
c-abi-libp2p/examples/rust/: e2ee_local_mesh.rs
c-abi-libp2p/src/: config.rs  ffi.rs  lib.rs
c-abi-libp2p/src/e2ee/: mod.rs
c-abi-libp2p/src/messaging/: delivery.rs  file_transfer.rs  messaging.rs  mod.rs
c-abi-libp2p/src/peer/: addr_events.rs  discovery.rs  mailbox_store.rs  manager.rs  mod.rs
c-abi-libp2p/src/transport/: libp2p.rs  mod.rs
