[package]
name = "cabi-rust-libp2p"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # gives .dll/.so/.dylib

[dependencies]
anyhow = "1"
base64 = "0.22"
libp2p = { version = "0.56", features = ["macros", "kad", "gossipsub", "noise", "yamux", "quic", "identify", "ping", "tcp", "tokio"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21.3"

[build-dependencies]
cbindgen = "0.26"   # generate .h
