[package]
name = "cabi-rust-libp2p"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]   # gives .dll/.so/.dylib and rust linkage for examples/tests

[dependencies]
anyhow = "1"
base64 = "0.22"
libp2p = { version = "0.56", features = ["macros", "kad", "gossipsub", "noise", "yamux", "quic", "identify", "ping", "tcp", "tokio", "autonat", "relay", "rendezvous", "request-response", "cbor"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21.3"
hex = "0.4.3"
rand = "0.8"
rand09 = { package = "rand", version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", package = "libsignal-protocol" }
sled = "0.34"

[build-dependencies]
cbindgen = "0.26"   # generate .h

[[example]]
name = "e2ee_local_mesh"
path = "examples/rust/e2ee_local_mesh.rs"

